--- a/footer.css
+++ b/footer.css
@@ -36,7 +36,7 @@ footer{
     color: #fff;
 }
 .bottom-Section>span{
-    margin: 20px;
+    margin: 0.5em;
 }
 .copy{
     padding-bottom: 1.2em;
@@ -53,5 +53,6 @@ footer{
     .bottom-Section{
         display: grid;
         grid-template-columns: 1fr;
+        gap: 4px;
     }
 }
