--- a/hsections.css
+++ b/hsections.css
@@ -1,10 +1,13 @@
-*{
+/* *{
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-}
+} */
 .hSections{
-    background-color: #767676;
+    background-color: #898b8d;
+    margin-top: -1.8em;
+    padding-top: 1.2em;
+    padding-bottom:1.2em;
 }
 .items {
     background-color: #fff;
@@ -14,6 +17,7 @@
     height: fit-content;
     padding: 15px;
     border-radius: 20px;
+    margin-top: 1.4em;
     margin: 1.4em;
     box-shadow: #00000059 0px 5px 15px;
 
