--- a/carouselCard.css
+++ b/carouselCard.css
@@ -11,6 +11,7 @@ main{
 .carouselCard-Section{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    place-items: center;
     gap: 10px;
     padding: 2em;
     position: relative;
@@ -23,7 +24,6 @@ main{
     width: 300px;
     height: 400px;
     padding: 20px;
-    /* box-shadow: 5px 5px 5px #fff; */
     display: flex;
     flex-direction: column;
     gap: 10px;
