--- a/carouselCard.css
+++ b/carouselCard.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 main{
-     background-color: #898b8d;
+     background-color: #e3e6e6;
      height: 170vh;
     
 }
