--- a/hsections.css
+++ b/hsections.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 } */
 .hSections{
-    background-color: #898b8d;
+    background-color: #e3e6e6;
     margin-top: -1.8em;
     padding-top: 1.2em;
     padding-bottom:1.2em;
