--- a/header.css
+++ b/header.css
@@ -179,7 +179,7 @@ a:hover:not(.login-links){
     /* display: flex; */
     flex-direction: column;
     position: absolute;
-    top: 68px;
+    top: 60px;
     left: 0px;
     height: fit-content;
     z-index: 1;
@@ -246,16 +246,22 @@ display: none;
 }
 
 @media screen and (max-width:500px){
-    .logo, .Address, .return, .userDetails, .language, .cart>.cart-title{
+    .logo, .Address, .language, .return, .cart{
         display: none;
     }
-    .userlogin{
-        display: flex;
+    .searchbar-container{
+        width: 80%;
+    }
+    .sidebar{
+        width: 55vw;
+        padding: 1.2em;
+        font-size: 14px;
+    }
+    .loginbar{
+        right: 0px;
     }
     #loginbox:checked~.loginbar{
         display: flex;
     }
-    .searchbar{
-        width: 60%;
-    }
+
 }
