Updated for screens between 501px to 650px

--- a/footer.css
+++ b/footer.css
@@ -45,6 +45,16 @@ footer{
     color: #fff;
 }
 
+@media  screen and (min-width:501px) and (max-width:650px) {
+    .footerItems{
+        display: grid;
+        grid-template-columns:  repeat(2, 1fr);
+        grid-template-rows:  repeat(2, 1fr);
+        place-items: center;
+    }
+    
+}
+
 @media screen and (max-width:500px) {
     .footerItems{
         display: grid;
