--- a/carouselCard.css
+++ b/carouselCard.css
@@ -10,6 +10,10 @@ main {
 
 }
 
+.carousel-control-prev, .carousel-control-next{
+    display: none;
+}
+
 .carousel-mobile {
     display: none;
 }
@@ -93,6 +97,129 @@ img {
 }
 
 @media screen and (min-width:751px) and (max-width:999px) {}
+
+@media screen and (min-width:501px) and (max-width:650px) {
+    .carousel-mobile{
+        display: block;
+    }
+    .carousel-desktop{
+        display: none;
+    }
+    .carouselCard-Section{
+        display: none;
+    }
+
+    .Mobile-cards {
+        display: flex;
+    }
+    
+    .delivery {
+        display: flex;
+    }
+    
+    .advertisement {
+        display: flex;
+    }
+
+    .mobile {
+        position: relative;
+        top: -100px;
+        background-color: #e3e6e6;
+    }
+
+    .Mobile-cards {
+        display: flex;
+        gap: 1.5em;
+        overflow-x: scroll;
+        margin-bottom: 1.2em;
+        padding: 1.2em;
+    }
+
+    ::-webkit-scrollbar {
+        display: none;
+    }
+
+    .BuyzoneProduct {
+        height: 50px;
+        width: 50px;
+        border-radius: 50%;
+    }
+
+    .BuyzoneProductC3 {
+        height: 50px;
+        width: 50px;
+        border-top-right-radius: 50%;
+        border-top-left-radius: 50%;
+    }
+
+    .mobilecard-container {
+        background-color: #fff;
+        box-shadow: #00000059 0px 5px 15px;
+        /* border-radius: 10px; */
+        width: 40%;
+        height: 150px;
+        padding: 0.5em;
+        display: grid;
+        grid-gap: 1em;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .itemcard-container {
+        height: 150px;
+        /* padding: 0.5em; */
+        /* border: 2px solid #000*/
+        box-shadow: 2px 2px 2px black;
+        /* border-radius: 10px; */
+        /* object-fit: fill;  */
+    }
+    .itemCards {
+        width: 120px;
+        height: 100%;
+    }
+
+    .delivery {
+        display: block;
+        height: 5vh;
+        width: 95vw;
+        margin: 20px auto;
+    }
+
+    .deliveryimage {
+        height: 100%;
+        width: 100%;
+    }
+
+    .advertisement {
+        display: block;
+        width: 90vw;
+        margin: 20px auto;
+    }
+
+    .buyzoneprimeimg {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width:350px) {
+    .mobilecard-container {
+        display: grid;
+        place-items: center;
+    }
+
+    .BuyzoneProduct {
+        height: 40px;
+        width: 40px;
+        border-radius: 50%;
+
+    }
+
+    .BuyzoneProductC3 {
+        height: 40px;
+        width: 40px;
+        border-top-right-radius: 50%;
+        border-top-left-radius: 50%;
+    }
+}
 
 @media screen and (max-width:500px) {
     .carousel-mobile {
