--- a/hsections.css
+++ b/hsections.css
@@ -57,6 +57,18 @@ animation: scrollLeft 20s ease-out;
     }
 } */
 
+@media screen and (min-width:1000px) and (max-width:1199px){
+    .hSections{
+        margin-top: 15vh;
+    }
+    }
+
+
+@media  screen and (min-width:501px) and (max-width:650px) {
+    .hSections{
+        margin-top: -30%;
+    }
+}
 
 @media screen and (max-width:500px) {
     .hSections{
@@ -85,10 +97,4 @@ animation: scrollLeft 20s ease-out;
         .hSections{
             margin-top: -79vh;
         }
-}
-
-@media screen and (min-width:1000px) and (max-width:1199px){
-.hSections{
-    margin-top: 15vh;
-}
 }
