--- a/login.css
+++ b/login.css
@@ -36,6 +36,10 @@ form{
     flex-direction: column;
     gap: 10px;
 }
+.hint{
+    color: grey;
+    font-size: 10px;
+}
 input[type="text"]{
     width: 100%;
     height: 2em;
