--- a/Buyzone/hsections.css
+++ b/Buyzone/hsections.css
@@ -17,7 +17,6 @@
     box-shadow: #00000059 0px 5px 15px;
 
 }
-
 .items > span {
     font-weight: 700;
     font-size: 1.5em;
@@ -62,11 +61,30 @@ animation: scrollLeft 20s ease-out;
         margin-top: 15vh;
     }
     }
+    @media  screen and (min-width:701px) and (max-width:800px) {
+        .hSections{
+            margin-top: -70%;
+        }
+        .itemsImages{
+            width: 170px;
+            height: 170px;
+            object-fit: contain;
+        }
+        .items > span {
+            font-weight: 600;
+            font-size: 1em;
+            text-align: center;
+        }
+    }
 
-
-@media  screen and (min-width:501px) and (max-width:650px) {
+@media  screen and (min-width:601px) and (max-width:700px) {
     .hSections{
-        margin-top: -30%;
+        margin-top: -20%;
+    }
+}
+@media  screen and (min-width:501px) and (max-width:600px) {
+    .hSections{
+        margin-top: -40%;
     }
 }
 
