--- a/Buyzone/hsections.css
+++ b/Buyzone/hsections.css
@@ -1,9 +1,10 @@
-.hSections{
+.hSections {
     background-color: #e3e6e6;
     margin-top: -1.8em;
     padding-top: 1.2em;
-    padding-bottom:1.2em;
+    padding-bottom: 1.2em;
 }
+
 .items {
     background-color: #fff;
     display: flex;
@@ -17,7 +18,8 @@
     box-shadow: #00000059 0px 5px 15px;
 
 }
-.items > span {
+
+.items>span {
     font-weight: 700;
     font-size: 1.5em;
 }
@@ -29,20 +31,23 @@
     gap: 20px;
     scrollbar-width: none;
 }
-.caImages::-webkit-scrollbar{
+
+.caImages::-webkit-scrollbar {
     display: none;
 }
-.caImages > div {
+
+.caImages>div {
     min-width: 200px;
     height: 200px;
     flex-shrink: 0;
 }
 
-.itemsImages{
+.itemsImages {
     width: 200px;
     height: 200px;
     object-fit: contain;
 }
+
 /* .caImages:hover{
 animation: scrollLeft 20s ease-out;
 }
@@ -56,55 +61,74 @@ animation: scrollLeft 20s ease-out;
     }
 } */
 
-@media screen and (min-width:1000px) and (max-width:1199px){
+@media  screen and (min-width:1200px) {
     .hSections{
-        margin-top: 15vh;
+        margin-top: -15%;
     }
+    
+}
+
+@media screen and (min-width:1000px) and (max-width:1199px) {
+    .hSections {
+        padding-top: 15vh;
     }
-    @media  screen and (min-width:701px) and (max-width:800px) {
-        .hSections{
-            margin-top: -70%;
-        }
-        .itemsImages{
-            width: 170px;
-            height: 170px;
-            object-fit: contain;
-        }
-        .items > span {
-            font-weight: 600;
-            font-size: 1em;
-            text-align: center;
-        }
+}
+@media screen and (min-width:801px) and (max-width:999px) {
+    .hSections {
+        padding-top: 10%;
+    }
+}
+@media screen and (min-width:701px) and (max-width:800px) {
+    .hSections {
+        margin-top: -55%;
     }
 
-@media  screen and (min-width:601px) and (max-width:700px) {
-    .hSections{
+    .itemsImages {
+        width: 170px;
+        height: 170px;
+        object-fit: contain;
+    }
+
+    .items>span {
+        font-weight: 600;
+        font-size: 1em;
+        text-align: center;
+    }
+}
+
+@media screen and (min-width:601px) and (max-width:700px) {
+    .hSections {
         margin-top: -20%;
     }
 }
-@media  screen and (min-width:501px) and (max-width:600px) {
-    .hSections{
+
+@media screen and (min-width:501px) and (max-width:600px) {
+    .hSections {
         margin-top: -40%;
     }
 }
 
 @media screen and (max-width:500px) {
-    .hSections{
+    .hSections {
         margin-top: -58vh;
     }
-    .items{
+
+    .items {
         height: fit-content;
         gap: 0.5em;
     }
-    .caImages{
+
+    .caImages {
         padding: 10px;
     }
-    .items > span {
+
+    .items>span {
         font-weight: 600;
         font-size: 1.2em;
         text-align: center;
     }
-    .itemsImages{
+
+    .itemsImages {
         width: 150px;
         height: 150px;
         object-fit: contain;
@@ -112,7 +136,7 @@ animation: scrollLeft 20s ease-out;
 }
 
 @media screen and (max-width:350px) {
-        .hSections{
-            margin-top: -79vh;
-        }
+    .hSections {
+        margin-top: -79vh;
+    }
 }
