--- a/Buyzone/hsections.css
+++ b/Buyzone/hsections.css
@@ -60,17 +60,21 @@ animation: scrollLeft 20s ease-out;
         transform: translateX(-50%);
     }
 } */
-
-@media  screen and (min-width:1200px) {
+@media screen and (min-width:1351px) {
     .hSections{
         padding-top: 15%;
-    }
-    
+    }  
+}
+
+@media  screen and (min-width:1200px)  and (max-width:1350px){
+    .hSections{
+        padding-top: 10%;
+    }   
 }
 
 @media screen and (min-width:1000px) and (max-width:1199px) {
     .hSections {
-        padding-top: 15vh;
+        padding-top: -15vh;
     }
 }
 @media screen and (min-width:801px) and (max-width:999px) {
