--- a/Buyzone/carouselCard.css
+++ b/Buyzone/carouselCard.css
@@ -303,12 +303,14 @@ img {
 
     .advertisement {
         display: block;
-        width: 90vw;
+        width: 75%;
         margin: 20px auto;
+        /* margin-top: -16px; */
     }
 
     .buyzoneprimeimg {
         width: 100%;
+        /* height: 220px; */
     }
 }
 
@@ -421,11 +423,13 @@ img {
 
     .advertisement {
         display: block;
-        width: 90vw;
+        width: 75%;
         margin: 20px auto;
+        margin-top: -16px;
     }
 
     .buyzoneprimeimg {
+        height: 200px;
         width: 100%;
     }
 }
